--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,9 +1,9 @@
-title: Add costumes to a sprite
+title: Add a costume to a sprite
 hero_image: images/banner.png
-description: scratch3-add-costumes-to-a-sprite description
+description: Add a costume to a sprite
 version: 4
 listed: false
 copyedit: false
 last_tested: "2021-03-12"
 steps:
-  - title: Add costumes to a sprite
+  - title: Add a costume to a sprite
