--- a/fr-FR/meta.yml
+++ b/fr-FR/meta.yml
@@ -1,10 +1,10 @@
 ---
 title: Ajouter des costumes à un sprite
 hero_image: images/banner.png
-description: description scratch3-ajouter-costumes-à-un-sprite
+description: Ajouter un costume à un sprite
 version: 4
 listed: false
 copyedit: false
 last_tested: "2021-03-12"
 steps:
-  - title: Ajouter des costumes à un sprite
+  - title: Ajouter un costume à un sprite
