--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -1,10 +1,10 @@
 ---
-title: Voeg uiterlijken aan een sprite toe
+title: Voeg een uiterlijk aan een sprite toe
 hero_image: images/banner.png
-description: scratch3-add-costumes-to-a-sprite description
+description: Voeg een uiterlijk aan een sprite toe
 version: 4
 listed: false
 copyedit: false
 last_tested: "2021-03-12"
 steps:
-  - title: Voeg uiterlijken aan een sprite toe
+  - title: Voeg een uiterlijk aan een sprite toe
